--- a/src/Components/Videos/Videos.css
+++ b/src/Components/Videos/Videos.css
@@ -4,4 +4,14 @@
     align-items: center;
     justify-content: start;
     gap: 20px;
+    background-image: url('../../assets/cheetah.jpeg');
+    padding: 30px 0;
+}
+
+.youtubeIframe {
+    border: none;
+    border-radius: 15px;
+        -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
