--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 * {
     font-family: 'Macondo', cursive;
+    box-sizing: content-box;
+    transition: .5s;
 }
 body {
+    overflow-x: hidden;
     height: fit-content;
-    background-image: url('../src/assets/crowd.jpg');
-    background-size: 1750px;
-    background-position-y: -170px;
     margin: 0;
 }
