--- a/src/Components/Videos/Videos.css
+++ b/src/Components/Videos/Videos.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: start;
     gap: 20px;
-    background-image: url('../../assets/cheetah.jpeg');
+    background-image: url('../../assets/photos/cheetah.jpeg');
     padding: 30px 0;
 }
 
