--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
 a {
     color: inherit;
 }
+
+.bigX {
+    font-size: 50px;
+    border-radius: 12px;
+    padding: 10px;
+    background-color: rgba(24, 24, 24, .9);
+    height: fit-content;
+    width: fit-content;
+    margin: 0;
+}
