--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('../../assets/fullbandBacks.jpg');
+    background-image: url('../../assets/photos/fullbandBacks.jpg');
     background-size: cover;
 }
 
