--- a/src/Views/EPK/EPK.css
+++ b/src/Views/EPK/EPK.css
@@ -1,5 +1,5 @@
 .mainEPKDiv {
-    background-image: url('../../assets/photos/cheetah.jpeg');
+    background-image: url('../../public/photos/cheetah.jpeg');
     background-size: cover;
     overscroll-behavior-block: none;
     width: 100vw;
