--- a/src/Views/Merch/Merch.css
+++ b/src/Views/Merch/Merch.css
@@ -2,7 +2,15 @@
     background-color: rgb(20, 20, 20);
     color: antiquewhite;
     width: 100%;
-    height: fit-content;
+    height: 100vh;
+    width: 100vw;
     padding: 20px;
     font-size: 3vw;
+    overflow: hidden;
+}
+
+.cartHeader {
+    position: fixed;
+    top: 50px;
+    right: 80px;
 }
