--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 * {
     font-family: 'Macondo', cursive;
-    box-sizing: content-box;
+    box-sizing: border-box;
     transition: .5s;
 }
 body {
     overflow-x: hidden;
     height: fit-content;
     margin: 0;
+}
+
+.hover:hover {
+cursor: pointer;
 }
