--- a/src/Views/Merch/Merch.css
+++ b/src/Views/Merch/Merch.css
@@ -41,12 +41,65 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    padding: 160px;
+    padding: 20px;
+}
+
+.mainShippingDiv {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    padding: 20px;
+    background-image: url('/photos/cheetah.jpeg');
 }
 
 .kiss {
     width: 100px;
 }
+
+.shippingForm {
+    border: solid white 3px;
+    border-radius: 5px;
+    width: 95vw;
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    gap: 5px;
+    background-color: rgba(24, 24, 24, .9);
+}
+.shippingInput {
+    width: 60%;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+}
+.shippingTextArea {
+    width: 350px;
+    height: 100px;
+    border: none;
+    border-radius: 12px;
+    padding: 20px;
+    max-width: 80%;
+}
+.shippingLabel {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+.oneLastStep {
+    width: 200px;
+    text-align: center;
+    background-color: rgba(24, 24, 24, .9);
+    padding: 20px;
+    border-radius: 12px;
+}
+
 
 @media (max-width: 400px) {
     .cartHeader {
