--- a/src/Views/Merch/Merch.css
+++ b/src/Views/Merch/Merch.css
@@ -80,12 +80,12 @@
     padding: 10px;
 }
 .shippingTextArea {
-    width: 350px;
+    width: 80%;
     height: 100px;
     border: none;
     border-radius: 12px;
     padding: 20px;
-    max-width: 80%;
+
 }
 .shippingLabel {
     width: 80%;
@@ -98,6 +98,22 @@
     background-color: rgba(24, 24, 24, .9);
     padding: 20px;
     border-radius: 12px;
+}
+
+.shippingSubmitBtn {
+ width: 100px;
+ height: 30px;
+ border-radius: 5px;
+ border: none;
+ background-color: lightpink;
+ color: black;
+ margin-top: 20px;
+
+}
+.shippingSubmitBtn:hover {
+    background-color: black;
+    color: lightpink;
+    border: solid white 1px;
 }
 
 
