--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -18,3 +18,9 @@
     box-shadow: 10px 10px 18px 0px rgba(74, 0, 0, 1);
     border: solid white 1px;
 }
+
+@media (max-width: 400px) {
+    .eachEvent {
+        width: 80%;
+    }
+}
