--- a/src/Views/EPK/EPK.css
+++ b/src/Views/EPK/EPK.css
@@ -170,6 +170,12 @@ font-size: 45px;
     margin: 10px;
 }
 
+
+@media (max-width: 400px) {
+    .epkSelectionDiv {
+        width: 99%;
+    }
+}
 @media (max-width: 600px) {
     .avepkText {
         font-size: 25px;
