--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: space-between;
     float: right;
+    align-items: center;
 }
 
 .openedCart {
@@ -87,11 +88,17 @@
     align-items: flex-end;
 }
 
+.openCloseCart {
+    font-size: 17px;
+}
 
 @media (max-width: 400px) {
     .cartAndPaypal {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .openCloseCart {
+        font-size: 12px;
     }
 }
