--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -15,7 +15,27 @@
     cursor: pointer;
 }
 
+.slidePhotoDiv {
+    border-radius: 12px;
+    border: solid white 1px;
+    overflow: hidden;
+    width: 50vw;
+    height: 50vw;
+    max-width: 700px;
+    max-height: 700px;
+    min-width: 300px;
+    min-height: 300px;
+    display: flex;
+    justify-content: center;
+}
+.slidePhoto {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .outerGalleryDiv {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
