--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -57,14 +57,18 @@
     max-height: 135px;
     min-width: 320px;
     min-height: 100px;
-    border: solid gold 3px;
+    border: solid goldenrod 3px;
     border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+.headerBtnDiv > * {
+    text-decoration: none;
+}
 .headerBtn:hover {
     border: lightpink solid 3px;
     cursor: pointer;
-
 }
 
 .headerBtn:hover>* {
@@ -72,12 +76,17 @@
     color: lightpink
 }
 
+
 .cheetahText {
-    padding: 15px 15px;
-    background-color: rgba(248, 176, 187.9);
-    color: black;
-    border-radius: 10px;
-    font-size: 30px;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+    gap: 5px;
+    color: olivedrab;
+    border-radius: 20px;
+    background-color: rgba(24, 24, 24, .8);
 }
 
 .photoCredit {
